Mon Jun  7 15:44:51 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * DnC/ExecutionManager/Execution_Manager.cpp:
        * DnC/ExecutionManager/ExecutionManager.mpc:

          First cut at writing the executor that is used to start
          deployment process and terminate it. Changed the mpc file to
          rename the generated executable to be named executor as
          described in the specification.

Mon Jun  7 14:23:38 2004  Emre Turkay  <turkaye@dre.vanderbilt.edu>

	* DnC/Config_Handlers/DnC_Dump.cpp:

	Fixed an error causing segmentation fault by changing
	Dump_Obj::desc_map_ template argument from "const char*"
	to "std::string".


Mon Jun  7 12:10:31 2004  Gan Deng <gan.dengg@vanderbilt.edu>

	* DnC/DomainApplicationManager/DomainApplicationManager_Impl.cpp:

          The PortConnectionDescription structure a PortKind variable change the
          code to make the connection decisions based on value of that variable.
          Also change the connection fields values which will be passed to
          finishLaunch() to make the NodeApplication work.

        * DnC/DomainApplicationManager/DomainApplicationManager_Impl.h:

          Change the definition type of the <plan_> variable from const reference
          to just regular object mapped from IDL struct type.

Mon Jun  7 01:40:57 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* DnC/NodeApplicationManager/NodeApplicationManager_Impl.cpp:
	* DnC/NodeApplicationManager/NodeApplicationManager_Impl.h:
	  Finished the creat_connctions method.
	  Partially finished the startLaunch method.

	* DnC/ciao/NodeApplication_Impl.h:
	* DnC/ciao/NodeApplication_Impl.cpp:
	* DnC/ciao/NodeApplication_Impl.inl:
	  Finished implementing the NodeApplication interface.
	  Added the finish launch method.

Sun Jun  6 21:13:27 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/ServantSourceGenerator.cpp:
        * CIDLC/ServantHeaderGenerator.cpp:
