@@ -4,11 +4,9 @@
 ACE_INLINE
 CIAO::NodeApplicationManager_Impl::
 NodeApplicationManager_Impl (CORBA::ORB_ptr o,
-			     PortableServer::POA_ptr p,
-			     const Deployment::DeploymentPlan & plan)
+			     PortableServer::POA_ptr p)
   : orb_ (CORBA::ORB::_duplicate (o)),
     poa_ (PortableServer::POA::_duplicate (p)),
-    plan_(plan),
     spawn_delay_ (5)
 {
 }
